# aeye-map-tools

./: AGENTS.md  README.md  package.xml  setup.py
config/: nav2_keepout_patch.yaml  zone_server.yaml  zones.example.yaml  zones.web.yaml
launch/: navegacion_gps_with_map_tools.launch.py  no_go_editor.launch.py  zone_server.launch.py
map_tools/: mask_utils.py  web_zone_server.py  zone_io.py  zone_mask.py  zone_projection.py  zone_server.py  zone_websocket.py
test/: test_exponential_degrade.py  test_mask_rasterization.py  test_no_go_editor_launch_contract.py  test_web_manual_keyboard_contract.py  test_web_zone_server.py  test_zone_io.py  test_zone_mask.py
web/: index.html
